<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Mama Recipe</string>
    <string name="ingredient">Bahan</string>
    <string name="step">Step by step</string>
    <string name="author_name">Novandi Ramadhan</string>
    <string name="author_email">novandiramadhan80@gmail.com</string>
    <string name="about">About</string>
    <string name="photo">Photo</string>
    <string name="food_name">Nama Makanan</string>
    <string name="food_description">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</string>
    <string name="share">share</string>
    <string name="bahan">Bahan-bahan :</string>
    <string name="step_by_step">Step by step :</string>
    <string-array name="data_name">
        <item>Ayam Betutu Bali</item>
        <item>Cakalang Fufu Likupang</item>
        <item>Empal Gentong Cirebon</item>
        <item>Ikan Gohu Maluku Utara</item>
        <item>Ikan Bakar Manokwari Papua Barat</item>
        <item>Mie Aceh</item>
        <item>Nasi Lawar Bali</item>
        <item>Rendang Asli Sumatera Barat</item>
        <item>Sate Bulayak Mandalika</item>
        <item>Soto Banjar Kalimantan Selatan</item>
        <item>Sup Konro Sulawesi Selatan</item>
        <item>Surabi Bandung</item>
    </string-array>
    <string-array name="data_description">
        <item>Makanan tradisional khas Bali yang terbuat dari ayam atau bebek utuh yang berisi bumbu, kemudian dipanggang dalam api sekam.</item>
        <item>Olahan ikan cakalang yang diproses dengan cara diasap dan dimasak dengan bumbu pedas bernama pampis.</item>
        <item>Masakan tradisional yang sudah eksis sejak 1994, isinya terdiri dari usus, babat, dan irisan daging sapi direbus dalam kuah kuning dengan taburan daun kucai.</item>
        <item>Terbuat dari olahan ikan tuna atau cakalang mentah yang dibumbui dengan garam, jeruk nipis dan daun kemangi.</item>
        <item>Ikan Bakar Manokwari berbeda dengan jenis ikan bakar pada umumnya. Ikan ini dibakar terpisah baru kemudian dibumbui dengan sambal yang digiling kasar. Rasa ikan Bakar Manokwari adalah pedas dan segar.</item>
        <item>Mie kuning tebal dengan irisan daging sapi, daging kambing atau makanan laut (udang dan cumi) disajikan dalam sup sejenis kari yang gurih dan pedas.</item>
        <item>Masakan kombinasi antara sayuran dengan irisan daging. Biasanya makanan ini disajikan dengan cara dibumbui dan dicampur jadi satu.</item>
        <item>Tekstur daging yang empuk, rasa yang pedas bercampur gurih, dan kerap disajikan dengan bumbu membuat hidangan ini dapat dengan mudah menarik minat siapa saja yang menyantapnya.</item>
        <item>Dinamakan bulayak karena sate daging ini disajikan bersama lontong ketan yang dililit daun aren khas Lombok bernama bulayak. Daging pilihan sate ini pun bermacam-macam, bisa menggunakan daging sapi maupun ayam.</item>
        <item>Soto Banjar menggunakan rempah-rempahan seperi kayu manis, biji pala, dan cengkih ditambah sedikit susu sehingga makanan ini kaya cita rasa khas indonesia yang tentunya bikin ketagihan.</item>
        <item>Sup konro iga sapi lembut yang meleleh di mulut dan kuahnya yang pedas gurih akan menambah selera makan.</item>
        <item>Terbuat dari adonan tepung beras dan terigu kemudian dimasak atau dibakar menggunakan tembikar tanah liat. Surabi paling enak dimakan dengan saus manis gula jawa dan wedang hangat.</item>
    </string-array>
    <string-array name="data_photo">
        <item>@drawable/ayam_betutu_bali</item>
        <item>@drawable/cakalang_fufu_likupang</item>
        <item>@drawable/empal_gentong_cirebon</item>
        <item>@drawable/gohu_ikan_maluku_utara</item>
        <item>@drawable/ikan_bakar_manokwari_papua_barat</item>
        <item>@drawable/mie_aceh</item>
        <item>@drawable/nasi_lawar_bali</item>
        <item>@drawable/rendang_asli_sumatera_barat</item>
        <item>@drawable/sate_bulayak_mandalika</item>
        <item>@drawable/soto_banjar_kalimantan_selatan</item>
        <item>@drawable/sup_konro_sulawesi_selatan</item>
        <item>@drawable/surabi_bandung</item>
    </string-array>
    <string-array name="data_ingredient">
        <item>- 1,2 Kg / 1 Ekor Ayam\n- 200 gr / 1 Mangkuk Daun Singkong (Rebus 5 menit)\n- 3 Batang Serai\n2 Lembar Daun Salam\n- 1 Lembar Daun Pisang\n- 15 Buah Cabe Merah\n- 12 Siung Bawang Merah\n- 6 Siung Bawang Putih\n- 6 Butir Kemiri\n- 6 cm / 3 Ruas Jari Jahe\n- 4 cm / 2 Ruas Jari Kunyit\n- 2 cm / 1 Ruas Jari Lengkuas\n- 2 cm / 1 Ruas Jari Kencur\n- 2 gr / 0,5 Sachet Terasi\n- 2 Sendok Teh Ketumbar\n- 2 Sendok Teh Merica\n- 0,5 Sendok Teh Pala\n- 0,5 Sendok Teh Garam\n- 0,5 Sendok Teh Gula</item>
        <item>- 500 gr ikan cakalang asap\n- 2 batang serai, dimemarkan\n- 1 buah jeruk limau (ambil airnya)\n- 1 ikat daun kemangi (ambil daunnya)\n- 5 lembar daun jeruk, diiris kecil\n- 1 ruas jari lengkuas, dimemarkan\n- 3 cm jahe, dimemarkan\n- minyak goreng secukupnya\n- 1 sendok teh terasi, dibakar\n- 8 buah cabai merah\n- 1 sendok teh garam\n- 7 buah cabai rawit merah\n- ½ sendok teh gula pasir\n- 8 buah bawang merah</item>
        <item>- 500 gram daging sapi\n- 500 gram jeroan sapi\n- 1 liter santan sedang\n- 2 lembar daun salam\n- 6 lembar daun jeruk\n- 2 batang serai, memarkan\n- 4 cm kunyit, bakar\n- 4 cm jahe, bakar\n- 2 butir kapulaga\n- 2 butir cengkeh\n- 1 ruas jempol lengkuas, memarkan\n- 1 cm kayumanis\n- Garam, gula &amp; kaldu sapi bubuk secukupnya\n- 1,5 liter air untuk merebus daging\n- 15 butir bawang merah\n- 8 siung bawang putih\n- 8 butir kemiri (sangrai)\n- 2 cm kunyit, bakar\n- 2 cm jahe\n- 2 sendok teh ketumbar, sangrai\n- ¼ sendok teh jinten\n- 1 sendok teh merica butiran</item>
        <item>- 250 gram fillet ikan tuna segar\n- 2 sendok makan air jeruk lemon cui/jeruk nipis\n- 1 sendok  garam\n- 50 gram daun kemangi\n- 10 buah cabai rawit, iris kasar\n- 10 butir bawang merah, iris-iris\n- 2 sendok makan kenari sangrai, tumbuk kasar\n- 5 sendok makan minyak goreng, panaskan.</item>
        <item>- 2 buah Ikan Kuniran (atau ikan laut jenis lain\n- 1 buah jeruk nipis\n- 1 sendok makan garam\n- ¼ sendok makan merica bubuk\n- 7 buah cape rawit\n- 3 buah cabe keriting\n- 2 buah bawang secukupnya\n- garam secukupnya</item>
        <item>- 500 gr mie basah atau mie kuning\n- 150 gr udang segar, kupas dan buang kulitnya\n- 150 gr daging sapi atau daging kambing.\n- Bila tidak menyukai keduanya, anda bisa memakai daging ayam namun akan kurang ciri khas Mie Aceh-nya.\n- 1 buah tomat, potong memanjang segitiga\n- 5 siung bawang merah, iris tipis\n- 4 siung bawang putih, iris tipis\n100 gr kol putih, cincang halus\n100 gr toge segar, buang ekornya, atau bila suka anda bisa tidak membuang ekornya\n- 25 gr daun bawang, iris halus\n- 10 gr daun seledri, iris halus\n- 600 ml kaldu sapi\n- 2 sendok makan kecap manis\n- 2 sendok makan kecap asin\n- 4 sendok makan minyak goreng\n- 7 buah cabe merah\n- 7 siung bawang putih\n- 1 cm jahe\n- 3 butir kemiri\n- ¼ sendok teh ketumbar\n- ¼ sendok teh jinten\n- 3 butir adas manis\n- 3 butir kapulaga\n- ½ cm kunyit\n- 1 sendok teh merica bubuk</item>
        <item>- 250 gram ayam tanpa tulang (rebus dan cincang kasar)\n- 2 ikat kacang panjang (rebus dan potong kecil kasar)\n- 1 buah nangka muda ukuran sedang (rebus dan cincang kasar)\n- ½ butir kelapa (bakar dan parut)\n- 1 buah jeruk limau\n- Garam, gula, dan penyedap (secukupnya)\n- Bawang goreng (secukupnya)\n- 10 siung bawang merah (iris dan goreng)\n- 10 siung bawang putih (iris dan goreng)\n- 10 buah cabai rawit (iris dan goreng)\n- 1 sdt terasi bakar\n- 3 cm laos\n- 3 cm kencur\n- 3 cm jahe\n- 3 cm kunyit\n- 7 siung bawang merah\n- 5 siung bawang putih\n- 2 buah kemiri\n- 1 sdt merica</item>
        <item>- 1 kilogram daging sapi bagian paha, potong 3 x 4 cm\n- 1 ibu jari lengkuas, dimemarkan\n- 1 batang serai, dimemarkan\n- 2 lembar daun kunyit\n- 5 lembar daun jeruk purut\n- 3 lembar daun salam\n- ½ sendok teh pala bubuk\n- 1 buah asam kandis\n- 2 liter santan dari 3 butir kelapa\n- 100 gram cabai merah\n- 13 butir bawang merah\n- 3 siung bawang putih\n- 2 cm jahe\n- 1 sendok teh lada\n- 5 butir kemiri\n- 1 sendok teh ketumbar\n- Garam secukupnya</item>
        <item>- 350 gram daging sapi, tumbuk kasar, potong kecil\n- 1 sdm air jeruk nipis\n- 100 gram kelapa setengah tua, parut kasar\n- 100 gram kacang tanah goreng, tumbuk halus\n- 1 sdm gula merah, serut\n- 200 ml santan kental dari 1 butir kelapa\n- 25 buah tusuk sate\n- 10 buah bulayak/lontong khas Lombok\n15 buah cabai rawit merah\n- 6 butir bawang merah\n- 4 siung bawang putih\n- ¾ sdt merica sangrai\n- ¾ sdt garam</item>
        <item>- 1 ekos ayam kampung muda (potong 4 atau beberapa bagian)\n- 1 ½ liter air untuk merebus ayam\n- 15 siung bawang merah\n- 7 siung bawang putih, iris tipis lalu goreng\n- 4 sentimeter jahe\n- ½ sendok teh pala bubuk\n1 sendok teh merica bubuk\n- 3 sentimeter kayumanis\n- 3 buah cengkeh\n- 2 buah kapulaga\n- 1 buah bungalawang (pekak)\n- 3 tangkai daun seledri\n- 2 tangkai daun bawang\n- 1 buah bawang bombay\n- Wortel secukupnya\n- Soun secukupnya, rendam dengan air\n- Telur bebek secukupnya, rebus hingga matang\n- Jeruk limau secukupnya\n- Sambal Bawang goreng untuk taburan secukupnya\n- 1 sendok makan susu kental manis\n- Ketupat secukupnya\n- Perkedel kentang secukupnya\n- Garam dan gula untuk bumbu\n- Penyedap rasa atau kaldu bubuk secukupnya\n- 1 sendok makan margarin dan minyak goreng untuk menumis bumbu</item>
        <item>- 1 kg iga sapi, iris\n- 2L air\n- 1 cm jahe, parut\n- 3 cm lengkuas, memarkan\n- 3 cm kayu manis\n- 2 lembar daun salam\n- 3 buah cengkih\n- 2 sdm asam jawa, larutkan dengan 2 sdm air hangat\n- 2 sdm Bango Kecap Manis\n- 1.5 sdt garam\n- 2 sdt Royco Kaldu Sapi\n- 3 sdm minyak sayur\n- 5 butir bawang merah\n- 3 siung bawang putih\n- 1 sdt merica putih bubuk\n- 1 sdm kluwak, ambil daging buahnya dan rendam dengan 2 sdm air panas\n- ½ sdm kunyit\n- ½ sdm jintan</item>
        <item>– 200 gram tepung beras\n– 600 ml santan, dari 1 butir kelapa\n– 150 gram kelapa muda parut memanjang\n– 2 sdm gula pasir\n– ½ sendok teh garam\n– Telur/telor ayam\n– Oncom pedas\n– Keripik udang rebon atau rempeyek kacang</item>
    </string-array>
</resources>