<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/tv_detail_photo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:adjustViewBounds="true"
            android:scaleType="centerCrop"
            tools:src="@drawable/surabi_bandung"
            android:contentDescription="@string/photo" />

        <TextView
            android:id="@+id/tv_detail_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="24sp"
            android:textStyle="bold"
            android:maxLines="2"
            android:paddingHorizontal="16dp"
            android:paddingTop="16dp"
            tools:text="@string/food_name" />

        <TextView
            android:id="@+id/tv_detail_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/food_description"
            android:paddingHorizontal="16dp"
            android:paddingVertical="16dp"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bahan"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_detail_ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/food_description"
            android:textSize="16sp"
            android:paddingHorizontal="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/step_by_step"
            android:paddingHorizontal="16dp"
            android:paddingTop="24dp"
            android:paddingBottom="8dp"
            android:textSize="16sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_detail_step"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="@string/food_description"
            android:textSize="16sp"
            android:paddingHorizontal="16dp"
            android:paddingBottom="32dp"/>

    </LinearLayout>

</ScrollView>